--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
-name: qr_code_scanner
+name: qr_code_scanner_plus
 description: QR code scanner that can be embedded inside flutter. It uses zxing in Android and MTBBarcode scanner in iOS.
-version: 1.0.0
+version: 1.0.1
 homepage: https://juliuscanute.com
 repository: https://github.com/juliuscanute/qr_code_scanner
 
@@ -9,7 +9,8 @@ environment:
   flutter: ">=3.3.0"
 
 dependencies:
-  js: ^0.6.3
+  # js: ^0.6.3
+  web: ^1.0.0
   flutter:
     sdk: flutter
   flutter_web_plugins:
