--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,28 +1,27 @@
 name: qr_code_scanner_example
 description: Demonstrates how to use the flutter_qr plugin.
-publish_to: 'none'
+publish_to: "none"
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
+
+  qr_code_scanner_plus:
+    path: ../
 
 dev_dependencies:
   flutter_lints: ^1.0.4
   flutter_test:
     sdk: flutter
 
-  qr_code_scanner:
-    path: ../
-
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
 
 # The following section is specific to Flutter.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
