--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
 name: qr_code_scanner_plus
 description: QR code scanner that can be embedded inside flutter. It uses zxing in Android and MTBBarcode scanner in iOS.
-version: 2.0.1
-homepage: https://juliuscanute.com
-repository: https://github.com/juliuscanute/qr_code_scanner
+version: 2.0.2
+homepage: https://vespr.xyz
+repository: https://github.com/vespr-wallet/qr_code_scanner_plus
 
 environment:
   sdk: '>=3.0.0 <4.0.0'
@@ -17,7 +17,7 @@ dependencies:
     sdk: flutter
 
 dev_dependencies:
-  flutter_lints: ^3.0.1
+  flutter_lints: ^4.0.0
 
 flutter:
   plugin:
