--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,4 +1,4 @@
-<manifest package="net.touchcapture.qr.flutterqr"
+<manifest package="net.touchcapture.qr.flutterqrplus"
     xmlns:tools="http://schemas.android.com/tools">
   <uses-sdk tools:overrideLibrary="com.google.zxing.client.android" />
 </manifest>
