--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,11 @@
 name: qr_code_scanner_plus
 description: QR code scanner that can be embedded inside flutter. It uses zxing in Android and MTBBarcode scanner in iOS.
-version: 2.0.8
+version: 2.0.8+1
 homepage: https://vespr.xyz
 repository: https://github.com/vespr-wallet/qr_code_scanner_plus
 
 environment:
-  sdk: '>=3.3.0 <4.0.0'
+  sdk: ">=3.3.0 <4.0.0"
   flutter: ">=3.3.0"
 
 dependencies:
@@ -30,3 +30,9 @@ flutter:
 #      web:
 #        pluginClass: FlutterQrPlusPlugin
 #        fileName: flutter_qr_web.dart
+
+# This package supports all platforms listed below.
+platforms:
+  android:
+  ios:
+  web:
