--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -34,8 +34,7 @@ android {
 
     defaultConfig {
         applicationId "net.touchcapture.qr.flutterqrexample"
-        // minSdkVersion is determined by Native View.
-        minSdkVersion 20
+        minSdkVersion flutter.minSdkVersion
         targetSdkVersion 35
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
